force-app/main/default/objects/ACR_Adjustment__c/ACR_Adjustment__c.object-meta.xml
<CustomObject>
    <label>ACR Adjustment</label>
    <nameField>
        <label>ACR Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACR Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>