force-app/main/default/objects/ACR_Adjustment__c/fields/Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Date__c</fullName>
    <label>Adjustment Date</label>
    <type>Date</type>
</CustomField>