force-app/main/default/objects/ACR_Adjustment__c/fields/Adjustment_Remark__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Remark__c</fullName>
    <label>Adjustment Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>