force-app/main/default/objects/ACR_Adjustment__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carry Forward</fullName>
            </value>
            <value>
                <fullName>Old Outstanding</fullName>
            </value>
            <value>
                <fullName>Backdated Contract Adjustment</fullName>
            </value>
            <value>
                <fullName>Other Adjustments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>