force-app/main/default/objects/ACR_Adjustment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contract.SBQQ__Order__r.blng__BillingAccount__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contract.Status</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>ACR Adjustments</relationshipLabel>
    <relationshipName>ACR_Adjustments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>