force-app/main/default/objects/ACR_Adjustment__c/validationRules/ContractAccountCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractAccountCheck</fullName>
    <active>false</active>
    <errorConditionFormula>Account__c  &lt;&gt;  Contract__r.AccountId</errorConditionFormula>
    <errorMessage>Contract Account and ACR Adjustment Account should be same.</errorMessage>
</ValidationRule>