force-app/main/default/objects/ACR_Adjustment__c/validationRules/ContractBalanceAmountCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractBalanceAmountCheck</fullName>
    <active>false</active>
    <errorConditionFormula>Contract__r.Balance_Amount__c  &lt; 0</errorConditionFormula>
    <errorMessage>Contract Balance Amount should be greater than or equals to 0.</errorMessage>
</ValidationRule>