force-app/main/default/objects/ACR_Adjustment__c/validationRules/ContractStatusCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractStatusCheck</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Contract__r.Status)  &lt;&gt; &apos;Activated&apos;</errorConditionFormula>
    <errorMessage>ACR Adjustment can be created for Activated Contract only.</errorMessage>
</ValidationRule>